tests/spectest/return_call_ref.bin.wast
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\c6\80\80\80\00\0e\60"
  "\00\00\60\00\01\7f\60\00\01\7e\60\00\01\7d\60\00"
  "\01\7c\60\01\7f\01\7f\60\01\7e\01\7e\60\01\7d\01"
  "\7d\60\01\7c\01\7c\60\02\7d\7f\01\7f\60\02\7f\7e"
  "\01\7e\60\02\7c\7d\01\7d\60\02\7e\7c\01\7c\60\02"
  "\7e\7e\01\7e\03\9e\80\80\80\00\1d\01\02\03\04\05"
  "\06\07\08\09\0a\0b\0c\01\02\03\04\01\02\03\04\01"
  "\02\03\04\00\0d\06\06\06\06\e1\80\80\80\00\10\64"
  "\01\00\d2\00\0b\64\02\00\d2\01\0b\64\03\00\d2\02"
  "\0b\64\04\00\d2\03\0b\64\05\00\d2\04\0b\64\06\00"
  "\d2\05\0b\64\07\00\d2\06\0b\64\08\00\d2\07\0b\64"
  "\09\00\d2\08\0b\64\0a\00\d2\09\0b\64\0b\00\d2\0a"
  "\0b\64\0c\00\d2\0b\0b\64\0d\00\d2\19\0b\64\06\00"
  "\d2\1a\0b\64\06\00\d2\1b\0b\64\06\00\d2\1c\0b\07"
  "\df\81\80\80\00\11\08\74\79\70\65\2d\69\33\32\00"
  "\0c\08\74\79\70\65\2d\69\36\34\00\0d\08\74\79\70"
  "\65\2d\66\33\32\00\0e\08\74\79\70\65\2d\66\36\34"
  "\00\0f\0e\74\79\70\65\2d\66\69\72\73\74\2d\69\33"
  "\32\00\10\0e\74\79\70\65\2d\66\69\72\73\74\2d\69"
  "\36\34\00\11\0e\74\79\70\65\2d\66\69\72\73\74\2d"
  "\66\33\32\00\12\0e\74\79\70\65\2d\66\69\72\73\74"
  "\2d\66\36\34\00\13\0f\74\79\70\65\2d\73\65\63\6f"
  "\6e\64\2d\69\33\32\00\14\0f\74\79\70\65\2d\73\65"
  "\63\6f\6e\64\2d\69\36\34\00\15\0f\74\79\70\65\2d"
  "\73\65\63\6f\6e\64\2d\66\33\32\00\16\0f\74\79\70"
  "\65\2d\73\65\63\6f\6e\64\2d\66\36\34\00\17\04\6e"
  "\75\6c\6c\00\18\07\66\61\63\2d\61\63\63\00\19\05"
  "\63\6f\75\6e\74\00\1a\04\65\76\65\6e\00\1b\03\6f"
  "\64\64\00\1c\09\a0\80\80\80\00\05\03\00\0c\00\01"
  "\02\03\04\05\06\07\08\09\0a\0b\03\00\01\19\03\00"
  "\01\1a\03\00\01\1b\03\00\01\1c\0a\ab\83\80\80\00"
  "\1d\85\80\80\80\00\00\41\b2\02\0b\85\80\80\80\00"
  "\00\42\e4\02\0b\87\80\80\80\00\00\43\00\20\73\45"
  "\0b\8b\80\80\80\00\00\44\00\00\00\00\00\c8\ae\40"
  "\0b\84\80\80\80\00\00\20\00\0b\84\80\80\80\00\00"
  "\20\00\0b\84\80\80\80\00\00\20\00\0b\84\80\80\80"
  "\00\00\20\00\0b\84\80\80\80\00\00\20\01\0b\84\80"
  "\80\80\00\00\20\01\0b\84\80\80\80\00\00\20\01\0b"
  "\84\80\80\80\00\00\20\01\0b\86\80\80\80\00\00\23"
  "\00\15\01\0b\86\80\80\80\00\00\23\01\15\02\0b\86"
  "\80\80\80\00\00\23\02\15\03\0b\86\80\80\80\00\00"
  "\23\03\15\04\0b\88\80\80\80\00\00\41\20\23\04\15"
  "\05\0b\89\80\80\80\00\00\42\c0\00\23\05\15\06\0b"
  "\8b\80\80\80\00\00\43\c3\f5\a8\3f\23\06\15\07\0b"
  "\8f\80\80\80\00\00\44\3d\0a\d7\a3\70\3d\fa\3f\23"
  "\07\15\08\0b\8d\80\80\80\00\00\43\66\66\00\42\41"
  "\20\23\08\15\09\0b\8b\80\80\80\00\00\41\20\42\c0"
  "\00\23\09\15\0a\0b\94\80\80\80\00\00\44\00\00\00"
  "\00\00\00\50\40\43\00\00\00\42\23\0a\15\0b\0b\92"
  "\80\80\80\00\00\42\c0\00\44\66\66\66\66\66\06\50"
  "\40\23\0b\15\0c\0b\86\80\80\80\00\00\d0\00\15\00"
  "\0b\99\80\80\80\00\00\20\00\50\04\7e\20\01\05\20"
  "\00\42\01\7d\20\00\20\01\7e\23\0c\15\0d\0b\0b\94"
  "\80\80\80\00\00\20\00\50\04\7e\20\00\05\20\00\42"
  "\01\7d\23\0d\15\06\0b\0b\94\80\80\80\00\00\20\00"
  "\50\04\7e\42\2c\05\20\00\42\01\7d\23\0f\15\06\0b"
  "\0b\95\80\80\80\00\00\20\00\50\04\7e\42\e3\00\05"
  "\20\00\42\01\7d\23\0e\15\06\0b\0b"
)
(module instance)
(assert_return (invoke "type-i32") (i32.const 0x132))
(assert_return (invoke "type-i64") (i64.const 0x164))
(assert_return (invoke "type-f32") (f32.const 0x1.e64p+11))
(assert_return (invoke "type-f64") (f64.const 0x1.ec8p+11))
(assert_return (invoke "type-first-i32") (i32.const 0x20))
(assert_return (invoke "type-first-i64") (i64.const 0x40))
(assert_return (invoke "type-first-f32") (f32.const 0x1.51eb_86p+0))
(assert_return (invoke "type-first-f64") (f64.const 0x1.a3d7_0a3d_70a3_dp+0))
(assert_return (invoke "type-second-i32") (i32.const 0x20))
(assert_return (invoke "type-second-i64") (i64.const 0x40))
(assert_return (invoke "type-second-f32") (f32.const 0x1p+5))
(assert_return (invoke "type-second-f64") (f64.const 0x1.0066_6666_6666_6p+6))
(assert_trap (invoke "null") "null function reference")
(assert_return
  (invoke "fac-acc" (i64.const 0x0) (i64.const 0x1))
  (i64.const 0x1)
)
(assert_return
  (invoke "fac-acc" (i64.const 0x1) (i64.const 0x1))
  (i64.const 0x1)
)
(assert_return
  (invoke "fac-acc" (i64.const 0x5) (i64.const 0x1))
  (i64.const 0x78)
)
(assert_return
  (invoke "fac-acc" (i64.const 0x19) (i64.const 0x1))
  (i64.const 0x619f_b090_7bc0_0000)
)
(assert_return (invoke "count" (i64.const 0x0)) (i64.const 0x0))
(assert_return (invoke "count" (i64.const 0x3e8)) (i64.const 0x0))
(assert_return (invoke "count" (i64.const 0xf_4240)) (i64.const 0x0))
(assert_return (invoke "even" (i64.const 0x0)) (i64.const 0x2c))
(assert_return (invoke "even" (i64.const 0x1)) (i64.const 0x63))
(assert_return (invoke "even" (i64.const 0x64)) (i64.const 0x2c))
(assert_return (invoke "even" (i64.const 0x4d)) (i64.const 0x63))
(assert_return (invoke "even" (i64.const 0xf_4240)) (i64.const 0x2c))
(assert_return (invoke "even" (i64.const 0xf_4241)) (i64.const 0x63))
(assert_return (invoke "odd" (i64.const 0x0)) (i64.const 0x63))
(assert_return (invoke "odd" (i64.const 0x1)) (i64.const 0x2c))
(assert_return (invoke "odd" (i64.const 0xc8)) (i64.const 0x63))
(assert_return (invoke "odd" (i64.const 0x4d)) (i64.const 0x2c))
(assert_return (invoke "odd" (i64.const 0xf_4240)) (i64.const 0x63))
(assert_return (invoke "odd" (i64.const 0xf_423f)) (i64.const 0x2c))
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\97\80\80\80\00\05\60"
  "\00\00\60\00\01\64\00\60\00\01\63\00\60\00\01\64"
  "\70\60\00\01\70\03\8a\80\80\80\00\09\01\02\02\03"
  "\03\04\04\04\04\09\88\80\80\80\00\01\03\00\04\00"
  "\02\04\08\0a\e4\80\80\80\00\09\86\80\80\80\00\00"
  "\d2\00\15\01\0b\86\80\80\80\00\00\d2\00\15\01\0b"
  "\86\80\80\80\00\00\d2\02\15\02\0b\86\80\80\80\00"
  "\00\d2\00\15\01\0b\86\80\80\80\00\00\d2\04\15\03"
  "\0b\86\80\80\80\00\00\d2\00\15\01\0b\86\80\80\80"
  "\00\00\d2\02\15\02\0b\86\80\80\80\00\00\d2\04\15"
  "\03\0b\86\80\80\80\00\00\d2\08\15\04\0b"
)
(module instance)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8e\80\80\80\00\03\60"
    "\00\00\60\00\01\63\00\60\00\01\64\00\03\83\80\80"
    "\80\00\02\02\01\09\85\80\80\80\00\01\03\00\01\01"
    "\0a\97\80\80\80\00\02\86\80\80\80\00\00\d2\01\15"
    "\01\0b\86\80\80\80\00\00\d2\01\15\01\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8e\80\80\80\00\03\60"
    "\00\00\60\00\01\64\70\60\00\01\64\00\03\83\80\80"
    "\80\00\02\02\01\09\85\80\80\80\00\01\03\00\01\01"
    "\0a\97\80\80\80\00\02\86\80\80\80\00\00\d2\01\15"
    "\01\0b\86\80\80\80\00\00\d2\01\15\01\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8d\80\80\80\00\03\60"
    "\00\00\60\00\01\70\60\00\01\64\00\03\83\80\80\80"
    "\00\02\02\01\09\85\80\80\80\00\01\03\00\01\01\0a"
    "\97\80\80\80\00\02\86\80\80\80\00\00\d2\01\15\01"
    "\0b\86\80\80\80\00\00\d2\01\15\01\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8e\80\80\80\00\03\60"
    "\00\00\60\00\01\64\70\60\00\01\63\00\03\83\80\80"
    "\80\00\02\02\01\09\85\80\80\80\00\01\03\00\01\01"
    "\0a\97\80\80\80\00\02\86\80\80\80\00\00\d2\01\15"
    "\01\0b\86\80\80\80\00\00\d2\01\15\01\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8d\80\80\80\00\03\60"
    "\00\00\60\00\01\70\60\00\01\63\00\03\83\80\80\80"
    "\00\02\02\01\09\85\80\80\80\00\01\03\00\01\01\0a"
    "\97\80\80\80\00\02\86\80\80\80\00\00\d2\01\15\01"
    "\0b\86\80\80\80\00\00\d2\01\15\01\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8a\80\80\80\00\02\60"
    "\00\01\70\60\00\01\64\70\03\83\80\80\80\00\02\01"
    "\00\09\85\80\80\80\00\01\03\00\01\01\0a\97\80\80"
    "\80\00\02\86\80\80\80\00\00\d2\01\15\00\0b\86\80"
    "\80\80\00\00\d2\01\15\00\0b"
  )
  "type mismatch"
)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
  "\00\01\7f\03\82\80\80\80\00\01\00\07\8f\80\80\80"
  "\00\01\0b\75\6e\72\65\61\63\68\61\62\6c\65\00\00"
  "\0a\8b\80\80\80\00\01\85\80\80\80\00\00\00\15\00"
  "\0b"
)
(module instance)
(assert_trap (invoke "unreachable") "unreachable")
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\8a\80\80\80\00\02\60"
  "\01\7f\01\7f\60\00\01\7f\03\83\80\80\80\00\02\00"
  "\01\07\8f\80\80\80\00\01\0b\75\6e\72\65\61\63\68"
  "\61\62\6c\65\00\01\09\85\80\80\80\00\01\03\00\01"
  "\00\0a\96\80\80\80\00\02\84\80\80\80\00\00\20\00"
  "\0b\87\80\80\80\00\00\00\d2\00\15\00\0b"
)
(module instance)
(assert_trap (invoke "unreachable") "unreachable")
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\8a\80\80\80\00\02\60"
  "\01\7f\01\7f\60\00\01\7f\03\83\80\80\80\00\02\00"
  "\01\07\8f\80\80\80\00\01\0b\75\6e\72\65\61\63\68"
  "\61\62\6c\65\00\01\09\85\80\80\80\00\01\03\00\01"
  "\00\0a\9a\80\80\80\00\02\84\80\80\80\00\00\20\00"
  "\0b\8b\80\80\80\00\00\00\41\00\d2\00\15\00\41\00"
  "\0b"
)
(module instance)
(assert_trap (invoke "unreachable") "unreachable")
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8a\80\80\80\00\02\60"
    "\01\7f\01\7f\60\00\01\7f\03\83\80\80\80\00\02\00"
    "\01\07\8f\80\80\80\00\01\0b\75\6e\72\65\61\63\68"
    "\61\62\6c\65\00\01\09\85\80\80\80\00\01\03\00\01"
    "\00\0a\98\80\80\80\00\02\84\80\80\80\00\00\20\00"
    "\0b\89\80\80\80\00\00\00\42\00\d2\00\15\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8a\80\80\80\00\02\60"
    "\01\7f\01\7f\60\00\01\7f\03\83\80\80\80\00\02\00"
    "\01\07\8f\80\80\80\00\01\0b\75\6e\72\65\61\63\68"
    "\61\62\6c\65\00\01\09\85\80\80\80\00\01\03\00\01"
    "\00\0a\98\80\80\80\00\02\84\80\80\80\00\00\20\00"
    "\0b\89\80\80\80\00\00\00\d2\00\15\00\42\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\00\00\60\01\6f\00\03\82\80\80\80\00\01\01\0a\8c"
    "\80\80\80\00\01\86\80\80\80\00\00\20\00\15\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\00\00\60\01\70\00\03\82\80\80\80\00\01\01\0a\8c"
    "\80\80\80\00\01\86\80\80\80\00\00\20\00\15\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8c\80\80\80\00\02\60"
    "\00\02\7f\7f\60\01\64\00\01\7f\03\82\80\80\80\00"
    "\01\01\0a\8c\80\80\80\00\01\86\80\80\80\00\00\20"
    "\00\15\00\0b"
  )
  "type mismatch"
)
